feat: add conversation memory to Chat Mode
- ConversationSessionEntity + ConversationTurnEntity (JPA entities)
- ConversationSessionRepository + ConversationTurnRepository
- ConversationMemoryService interface + ConversationMemoryServiceImpl
  - sliding window context (default 10 turns, configurable)
  - getContextWindow / saveTurns / clearSession / formatContextForPrompt
- ChatService wired with memory: history injected into system prompt
- ChatController: userId now required in request body;
  DELETE /{personaName}/session endpoint for "New conversation"
- V24__create_conversation_memory.sql: conversation_session + conversation_turn tables
- OrchestratorProperties: Chat record (atlasia.orchestrator.chat.memory-window-size)
- ChatServiceTest: 3 unit tests covering fresh session, history injection, unknown persona

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>